# Tollway-QPC

./: .gitignore  CONTRIBUTING.MD  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROTOCOL.md  README.md  SECURITY.MD
.github/workflows/: security.yml
notes/: benchmarks.md  design-decisions.md  diagrams.md  roadmap.md
tollway-core/: Cargo.toml  README.md
tollway-core/benches/: comprehensive.rs  seal_open_bench.rs
tollway-core/examples/: basic_usage.rs  encrypted_vault.rs  file_encryption.rs
tollway-core/fuzz/: Cargo.toml
tollway-core/fuzz/fuzz_targets/: fuzz_corrupted_ct.rs  fuzz_parse_ciphertext.rs  fuzz_seal_open.rs
tollway-core/src/: constants.rs  error.rs  lib.rs  open.rs  seal.rs  types.rs
tollway-core/src/fips/: mod.rs  state.rs
tollway-core/src/primitives/: aead.rs  aead_aes.rs  kdf.rs  kem.rs  mod.rs  signature.rs
tollway-core/src/secure/: constant_time.rs  memory.rs  mod.rs
tollway-core/src/wire/: format.rs  mod.rs  serialize.rs
tollway-core/tests/: error_coverage.rs  nist_vectors.rs  properties.proptest-regressions  properties.rs  seal_open.rs  side_channel.rs  timing_rigorous.rs  vectors.rs
tollway-keys/: Cargo.toml
tollway-keys/examples/: identity_messaging.rs
tollway-keys/src/: audit.rs  backup.rs  derivation.rs  identity.rs  lib.rs  manager.rs  metadata.rs  policy.rs  rotation.rs  types.rs
tollway-keys/src/storage/: encryption.rs  file.rs  memory.rs  trait.rs
